# real-time-vehicle-data-processing

./: .gitignore  README.md  docker-compose.yml
data-stream-processor/: Dockerfile  Readme.md  data-streamer.py  pyproject.toml
data-stream-producer/: Dockerfile  Readme.md  grpc_server.py  pyproject.toml  streamer-service.py  vehicle_data_pb2.py  vehicle_data_pb2_grpc.py
vehicle-cpp-client/: Dockerfile  README.md  client  client.cpp  vehicle_data.proto
